# asher-cli

./: .env.example  .gitignore  CLAUDE.md  README.md  ROADMAP.md  app.py  pyproject.toml  renovate.json  requirements.txt  test.py  watchrun.py
.claude/: settings.json
.claude/hooks/: block-env.ps1
.claude/skills/pylitterbot-ref/: SKILL.md
.claude/skills/release/: SKILL.md
.claude/skills/textual/: SKILL.md
.githooks/: pre-push
.github/: pull_request_template.md
.github/workflows/: ci.yml  claude-code-review.yml  claude.yml  coverage.yml  dependency-audit.yml  release.yml
asher/: __init__.py  __main__.py  activity_labels.py  app.py  auth.py  cats.py  constants.py  faults.py  helpers.py  history_view.py  login_flow.py  mcp_bridge.py  mcp_config.py  robot_adapters.py  robot_protocol.py
asher/commands/: __init__.py  base.py
asher/connection/: __init__.py
asher/monitoring/: __init__.py
asher/slash-commands/: __init__.py
asher/ui/: __init__.py  style.tcss
tests/: conftest.py  test_activity_labels.py  test_app_pilot.py  test_auth.py  test_auth_pilot.py  test_cats.py  test_commands_pilot.py  test_connection.py  test_connection_mixin.py  test_faults.py  test_history_view.py  test_lr5_commands.py  test_mcp_bridge.py  test_mcp_command.py  test_mcp_config.py  test_missing_robot_commands.py  test_monitoring.py  test_new_commands_pilot.py  test_robot_adapters.py  test_ui.py  test_version_command.py  testhelpers.py
