[project]
name = "asher-cli"
version = "1.0.0"
description = "Terminal dashboard for Litter Robot (LR3/LR4/LR5) via the Whisker cloud API"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
keywords = ["litter-robot", "whisker", "tui", "terminal", "smart-home"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Home Automation",
]
dependencies = [
    "pylitterbot>=3.0.0",
    "textual>=0.47.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
asher = "asher.__main__:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["asher"]

# ── Ruff ──────────────────────────────────────────────────────────────────────

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = [
    "E501",   # line-length enforced by formatter
    "B008",   # do not perform function calls in argument defaults
    "SIM108", # use ternary instead of if-else (often less readable)
]

[tool.ruff.lint.isort]
known-first-party = ["asher"]

# ── Mypy ──────────────────────────────────────────────────────────────────────

[tool.mypy]
python_version = "3.10"
warn_return_any = true
ignore_missing_imports = true  # pylitterbot and textual have incomplete stubs

# ── Pytest ────────────────────────────────────────────────────────────────────

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test*.py"]
