[project]
name = "asher-cli"
version = "0.0.3"
description = "Terminal dashboard for Litter Robot (LR3/LR4/LR5) via the Whisker cloud API"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
keywords = ["litter-robot", "whisker", "tui", "terminal", "smart-home"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Home Automation",
]
dependencies = [
    "pylitterbot>=3.0.0",
    "textual>=0.47.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
    "keyring>=24.0.0",
]

[project.scripts]
asher = "asher.__main__:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "bump-my-version>=0.24",
    "poethepoet>=0.27",
    "textual-dev>=1.0",
    "watchfiles>=0.21",
]

[tool.poe.tasks]
lint   = "ruff check ."
fmt    = "ruff format --check ."
types  = "mypy asher/ --ignore-missing-imports"
test   = "pytest tests/ -v --tb=short"
fix.sequence = [{cmd = "ruff check --fix ."}, {cmd = "ruff format ."}]
dev    = "textual run --dev asher/__main__.py"
watch  = "watchfiles --filter python 'python -m asher' asher"
check.sequence = ["lint", "fmt", "types", "test"]
check.help = "run all CI checks locally"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["asher"]

# ── Ruff ──────────────────────────────────────────────────────────────────────

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = [
    "E501",   # line-length enforced by formatter
    "B008",   # do not perform function calls in argument defaults
    "SIM108", # use ternary instead of if-else (often less readable)
]

[tool.ruff.lint.isort]
known-first-party = ["asher"]

# ── Mypy ──────────────────────────────────────────────────────────────────────

[tool.mypy]
python_version = "3.10"
warn_return_any = true
ignore_missing_imports = true  # pylitterbot and textual have incomplete stubs
exclude = ["asher/slash-commands"]

# ── bump-my-version ───────────────────────────────────────────────────────────

[tool.bumpversion]
current_version = "0.0.3"
commit = true
tag = true
tag_name = "v{new_version}"
post_commit_hooks = ["uv lock --no-sync"]

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

# ── Pytest ────────────────────────────────────────────────────────────────────

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test*.py"]

# ── Coverage ──────────────────────────────────────────────────────────────────

[tool.coverage.run]
source = ["asher"]
omit = ["asher/__main__.py"]

[tool.coverage.report]
show_missing = true

